force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/NEST_Ascensus_Direct_Unique_ID_Record__c.object-meta.xml
<CustomObject>
    <description>Complies data related to the NEST savings plan</description>
    <label>NEST Ascensus Direct Unique ID Record</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NEST Ascensus Direct Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NEST Ascensus Direct Unique ID Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>