force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/fields/Branch_City__c.field-meta.xml
<CustomField>
    <fullName>Branch_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>