force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>