force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/fields/Branch_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Phone Number</label>
    <type>Phone</type>
</CustomField>