force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/fields/Branch_Trading_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_Trading_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Trading ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>