force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/fields/Branch_zip_code__c.field-meta.xml
<CustomField>
    <fullName>Branch_zip_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>