force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/fields/CRD_Number__c.field-meta.xml
<CustomField>
    <fullName>CRD_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRD Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>