force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/fields/Rep_City__c.field-meta.xml
<CustomField>
    <fullName>Rep_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>