force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/fields/Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Rep_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep Email</label>
    <type>Email</type>
</CustomField>