force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/fields/Rep_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep Full Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>