force-app/main/default/objects/NEST_Ascensus_Direct_Unique_ID_Record__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>